// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Touchable
  accessibilityComponentType="none"
  accessibilityLabel="Bananas, checkbox, empty"
  accessibilityTraits={
    Array [
      "none",
    ]
  }
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      Object {},
    ]
  }
  testID=""
>
  <Text
    color="blackColor"
    markdown={false}
    markdownStyle={Object {}}
    style={
      Object {
        "flex": 1,
      }
    }
    type="text"
  >
    Bananas
  </Text>
  <Image
    source={1}
  />
</Touchable>
`;

exports[`renders correctly when checked 1`] = `
<Touchable
  accessibilityComponentType="none"
  accessibilityLabel="Bananas, checkbox, selected"
  accessibilityTraits={
    Array [
      "none",
    ]
  }
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      Object {},
    ]
  }
  testID=""
>
  <Text
    color="blackColor"
    markdown={false}
    markdownStyle={Object {}}
    style={
      Object {
        "flex": 1,
      }
    }
    type="text"
  >
    Bananas
  </Text>
  <Image
    source={1}
  />
</Touchable>
`;
